revoced sercert key

--- a/garbage/spotify.ipynb
+++ b/garbage/spotify.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "\n",
     "birdy_uri = 'spotify:artist:36QJpDe2go2KgaRleHCDTp'\n",
-    "spotify = spotipy.Spotify(client_credentials_manager=SpotifyClientCredentials(\"86241dc85057485b9d020a85673e5c1d\",\"67e6e25d4d5c43e3abb36860e8fc1355\"))\n",
+    "spotify = spotipy.Spotify(client_credentials_manager=SpotifyClientCredentials(\"id\",\"secret\"))\n",
     "\n",
     "results = spotify.artist_albums(birdy_uri, album_type='album')\n",
     "albums = results['items']\n",
