--- a/garbage/spotifyAPI.ipynb
+++ b/garbage/spotifyAPI.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '86241dc85057485b9d020a85673e5c1d'\n",
-    "client_secret = '67e6e25d4d5c43e3abb36860e8fc1355'"
+    "client_id = ''\n",
+    "client_secret = ''"
    ]
   },
   {
