--- a/dataCollection/dataPreparing.ipynb
+++ b/dataCollection/dataPreparing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "0  2021-11-06     1  Easy On Me  Adele        1.0          1               3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "(330087, 7)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "0  Easy On Me  Adele"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "(330087, 2)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "4     Bad Habits                     Ed Sheeran         False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,16 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_songs_only.drop(columns=[\"index\",\"is_duplicate\"], inplace=True)"
+    "unique_songs_only.drop(columns=[\"is_duplicate\"], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_songs_only.rename(columns={\"index\" : \"original_index\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -336,100 +345,92 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>original_index</th>\n",
        "      <th>song</th>\n",
        "      <th>artist</th>\n",
+       "      <th>primary_artist</th>\n",
+       "      <th>featured_artist_1</th>\n",
+       "      <th>featured_artist_2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Easy On Me</td>\n",
        "      <td>Adele</td>\n",
+       "      <td>Adele</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Stay</td>\n",
        "      <td>The Kid LAROI &amp; Justin Bieber</td>\n",
+       "      <td>The Kid LAROI</td>\n",
+       "      <td>Justin Bieber</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Industry Baby</td>\n",
        "      <td>Lil Nas X &amp; Jack Harlow</td>\n",
+       "      <td>Lil Nas X</td>\n",
+       "      <td>Jack Harlow</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Fancy Like</td>\n",
        "      <td>Walker Hayes</td>\n",
+       "      <td>Walker Hayes</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Bad Habits</td>\n",
        "      <td>Ed Sheeran</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29676</th>\n",
-       "      <td>Stay</td>\n",
-       "      <td>The Ames Brothers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29677</th>\n",
-       "      <td>Over And Over</td>\n",
-       "      <td>Thurston Harris</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29678</th>\n",
-       "      <td>Little Serenade</td>\n",
-       "      <td>The Ames Brothers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29679</th>\n",
-       "      <td>I'll Get By (As Long As I Have You)</td>\n",
-       "      <td>Billy Williams</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29680</th>\n",
-       "      <td>Judy</td>\n",
-       "      <td>Frankie Vaughan</td>\n",
+       "      <td>Ed Sheeran</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>29681 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      song                         artist\n",
-       "0                               Easy On Me                          Adele\n",
-       "1                                     Stay  The Kid LAROI & Justin Bieber\n",
-       "2                            Industry Baby        Lil Nas X & Jack Harlow\n",
-       "3                               Fancy Like                   Walker Hayes\n",
-       "4                               Bad Habits                     Ed Sheeran\n",
-       "...                                    ...                            ...\n",
-       "29676                                 Stay              The Ames Brothers\n",
-       "29677                        Over And Over                Thurston Harris\n",
-       "29678                      Little Serenade              The Ames Brothers\n",
-       "29679  I'll Get By (As Long As I Have You)                 Billy Williams\n",
-       "29680                                 Judy                Frankie Vaughan\n",
+       "   original_index           song                         artist  \\\n",
+       "0               0     Easy On Me                          Adele   \n",
+       "1               1           Stay  The Kid LAROI & Justin Bieber   \n",
+       "2               2  Industry Baby        Lil Nas X & Jack Harlow   \n",
+       "3               3     Fancy Like                   Walker Hayes   \n",
+       "4               4     Bad Habits                     Ed Sheeran   \n",
        "\n",
-       "[29681 rows x 2 columns]"
+       "  primary_artist featured_artist_1 featured_artist_2  \n",
+       "0          Adele              None              None  \n",
+       "1  The Kid LAROI     Justin Bieber              None  \n",
+       "2      Lil Nas X       Jack Harlow              None  \n",
+       "3   Walker Hayes              None              None  \n",
+       "4     Ed Sheeran              None              None  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_songs_only"
+    "unique_songs_only.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,9 +462,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Users\\Alfaisal\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "D:\\Users\\Alfaisal\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n",
+      "D:\\Users\\Alfaisal\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "for x in range(len(artists_separated)):\n",
     "        unique_songs_only[\"primary_artist\"][x] = artists_separated[x][0]\n",
@@ -476,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +523,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>original_index</th>\n",
        "      <th>song</th>\n",
        "      <th>artist</th>\n",
        "      <th>primary_artist</th>\n",
@@ -510,6 +534,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Easy On Me</td>\n",
        "      <td>Adele</td>\n",
        "      <td>Adele</td>\n",
@@ -518,6 +543,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Stay</td>\n",
        "      <td>The Kid LAROI &amp; Justin Bieber</td>\n",
        "      <td>The Kid LAROI</td>\n",
@@ -526,6 +552,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Industry Baby</td>\n",
        "      <td>Lil Nas X &amp; Jack Harlow</td>\n",
        "      <td>Lil Nas X</td>\n",
@@ -534,6 +561,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Fancy Like</td>\n",
        "      <td>Walker Hayes</td>\n",
        "      <td>Walker Hayes</td>\n",
@@ -542,6 +570,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Bad Habits</td>\n",
        "      <td>Ed Sheeran</td>\n",
        "      <td>Ed Sheeran</td>\n",
@@ -555,9 +584,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29676</th>\n",
+       "      <td>330076</td>\n",
        "      <td>Stay</td>\n",
        "      <td>The Ames Brothers</td>\n",
        "      <td>The Ames Brothers</td>\n",
@@ -566,6 +597,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29677</th>\n",
+       "      <td>330082</td>\n",
        "      <td>Over And Over</td>\n",
        "      <td>Thurston Harris</td>\n",
        "      <td>Thurston Harris</td>\n",
@@ -574,6 +606,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29678</th>\n",
+       "      <td>330084</td>\n",
        "      <td>Little Serenade</td>\n",
        "      <td>The Ames Brothers</td>\n",
        "      <td>The Ames Brothers</td>\n",
@@ -582,6 +615,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29679</th>\n",
+       "      <td>330085</td>\n",
        "      <td>I'll Get By (As Long As I Have You)</td>\n",
        "      <td>Billy Williams</td>\n",
        "      <td>Billy Williams</td>\n",
@@ -590,6 +624,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29680</th>\n",
+       "      <td>330086</td>\n",
        "      <td>Judy</td>\n",
        "      <td>Frankie Vaughan</td>\n",
        "      <td>Frankie Vaughan</td>\n",
@@ -598,40 +633,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>29681 rows × 5 columns</p>\n",
+       "<p>29681 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      song                         artist  \\\n",
-       "0                               Easy On Me                          Adele   \n",
-       "1                                     Stay  The Kid LAROI & Justin Bieber   \n",
-       "2                            Industry Baby        Lil Nas X & Jack Harlow   \n",
-       "3                               Fancy Like                   Walker Hayes   \n",
-       "4                               Bad Habits                     Ed Sheeran   \n",
-       "...                                    ...                            ...   \n",
-       "29676                                 Stay              The Ames Brothers   \n",
-       "29677                        Over And Over                Thurston Harris   \n",
-       "29678                      Little Serenade              The Ames Brothers   \n",
-       "29679  I'll Get By (As Long As I Have You)                 Billy Williams   \n",
-       "29680                                 Judy                Frankie Vaughan   \n",
+       "       original_index                                 song  \\\n",
+       "0                   0                           Easy On Me   \n",
+       "1                   1                                 Stay   \n",
+       "2                   2                        Industry Baby   \n",
+       "3                   3                           Fancy Like   \n",
+       "4                   4                           Bad Habits   \n",
+       "...               ...                                  ...   \n",
+       "29676          330076                                 Stay   \n",
+       "29677          330082                        Over And Over   \n",
+       "29678          330084                      Little Serenade   \n",
+       "29679          330085  I'll Get By (As Long As I Have You)   \n",
+       "29680          330086                                 Judy   \n",
        "\n",
-       "          primary_artist featured_artist_1 featured_artist_2  \n",
-       "0                  Adele              None              None  \n",
-       "1          The Kid LAROI     Justin Bieber              None  \n",
-       "2              Lil Nas X       Jack Harlow              None  \n",
-       "3           Walker Hayes              None              None  \n",
-       "4             Ed Sheeran              None              None  \n",
-       "...                  ...               ...               ...  \n",
-       "29676  The Ames Brothers              None              None  \n",
-       "29677    Thurston Harris              None              None  \n",
-       "29678  The Ames Brothers              None              None  \n",
-       "29679     Billy Williams              None              None  \n",
-       "29680    Frankie Vaughan              None              None  \n",
+       "                              artist     primary_artist featured_artist_1  \\\n",
+       "0                              Adele              Adele              None   \n",
+       "1      The Kid LAROI & Justin Bieber      The Kid LAROI     Justin Bieber   \n",
+       "2            Lil Nas X & Jack Harlow          Lil Nas X       Jack Harlow   \n",
+       "3                       Walker Hayes       Walker Hayes              None   \n",
+       "4                         Ed Sheeran         Ed Sheeran              None   \n",
+       "...                              ...                ...               ...   \n",
+       "29676              The Ames Brothers  The Ames Brothers              None   \n",
+       "29677                Thurston Harris    Thurston Harris              None   \n",
+       "29678              The Ames Brothers  The Ames Brothers              None   \n",
+       "29679                 Billy Williams     Billy Williams              None   \n",
+       "29680                Frankie Vaughan    Frankie Vaughan              None   \n",
        "\n",
-       "[29681 rows x 5 columns]"
+       "      featured_artist_2  \n",
+       "0                  None  \n",
+       "1                  None  \n",
+       "2                  None  \n",
+       "3                  None  \n",
+       "4                  None  \n",
+       "...                 ...  \n",
+       "29676              None  \n",
+       "29677              None  \n",
+       "29678              None  \n",
+       "29679              None  \n",
+       "29680              None  \n",
+       "\n",
+       "[29681 rows x 6 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
