--- a/dataCollection/spotifyAPI_1_1.ipynb
+++ b/dataCollection/spotifyAPI_1_1.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '86241dc85057485b9d020a85673e5c1d'\n",
-    "client_secret = '269fedb47e014fef906320a90da8a634'"
+    "client_id = ''\n",
+    "client_secret = ''"
    ]
   },
   {
