--- a/dataCollection/dataPreparing.ipynb
+++ b/dataCollection/dataPreparing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,22 +65,73 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Stay</td>\n",
+       "      <td>The Kid LAROI &amp; Justin Bieber</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Industry Baby</td>\n",
+       "      <td>Lil Nas X &amp; Jack Harlow</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Fancy Like</td>\n",
+       "      <td>Walker Hayes</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Bad Habits</td>\n",
+       "      <td>Ed Sheeran</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date  rank        song artist  last-week  peak-rank  weeks-on-board\n",
-       "0  2021-11-06     1  Easy On Me  Adele        1.0          1               3"
+       "         date  rank           song                         artist  last-week  \\\n",
+       "0  2021-11-06     1     Easy On Me                          Adele        1.0   \n",
+       "1  2021-11-06     2           Stay  The Kid LAROI & Justin Bieber        2.0   \n",
+       "2  2021-11-06     3  Industry Baby        Lil Nas X & Jack Harlow        3.0   \n",
+       "3  2021-11-06     4     Fancy Like                   Walker Hayes        4.0   \n",
+       "4  2021-11-06     5     Bad Habits                     Ed Sheeran        5.0   \n",
+       "\n",
+       "   peak-rank  weeks-on-board  \n",
+       "0          1               3  \n",
+       "1          1              16  \n",
+       "2          1              14  \n",
+       "3          3              19  \n",
+       "4          2              18  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(1)"
+    "df.head()"
    ]
   },
   {
