--- a/garbage/charts.ipynb
+++ b/garbage/charts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df =pd.read_csv(\"data/hot_100.csv\")"
+    "df =pd.read_csv(\"../data/original_hot_100.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -104,38 +104,113 @@
        "      <td>2</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330082</th>\n",
+       "      <td>1958-08-04</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Over And Over</td>\n",
+       "      <td>Thurston Harris</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330083</th>\n",
+       "      <td>1958-08-04</td>\n",
+       "      <td>97</td>\n",
+       "      <td>I Believe In You</td>\n",
+       "      <td>Robert &amp; Johnny</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>97</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330084</th>\n",
+       "      <td>1958-08-04</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Little Serenade</td>\n",
+       "      <td>The Ames Brothers</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330085</th>\n",
+       "      <td>1958-08-04</td>\n",
+       "      <td>99</td>\n",
+       "      <td>I'll Get By (As Long As I Have You)</td>\n",
+       "      <td>Billy Williams</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330086</th>\n",
+       "      <td>1958-08-04</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Judy</td>\n",
+       "      <td>Frankie Vaughan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>330087 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date  rank           song                         artist  last-week  \\\n",
-       "0  2021-11-06     1     Easy On Me                          Adele        1.0   \n",
-       "1  2021-11-06     2           Stay  The Kid LAROI & Justin Bieber        2.0   \n",
-       "2  2021-11-06     3  Industry Baby        Lil Nas X & Jack Harlow        3.0   \n",
-       "3  2021-11-06     4     Fancy Like                   Walker Hayes        4.0   \n",
-       "4  2021-11-06     5     Bad Habits                     Ed Sheeran        5.0   \n",
+       "             date  rank                                 song  \\\n",
+       "0      2021-11-06     1                           Easy On Me   \n",
+       "1      2021-11-06     2                                 Stay   \n",
+       "2      2021-11-06     3                        Industry Baby   \n",
+       "3      2021-11-06     4                           Fancy Like   \n",
+       "4      2021-11-06     5                           Bad Habits   \n",
+       "...           ...   ...                                  ...   \n",
+       "330082 1958-08-04    96                        Over And Over   \n",
+       "330083 1958-08-04    97                     I Believe In You   \n",
+       "330084 1958-08-04    98                      Little Serenade   \n",
+       "330085 1958-08-04    99  I'll Get By (As Long As I Have You)   \n",
+       "330086 1958-08-04   100                                 Judy   \n",
        "\n",
-       "   peak-rank  weeks-on-board  \n",
-       "0          1               3  \n",
-       "1          1              16  \n",
-       "2          1              14  \n",
-       "3          3              19  \n",
-       "4          2              18  "
+       "                               artist  last-week  peak-rank  weeks-on-board  \n",
+       "0                               Adele        1.0          1               3  \n",
+       "1       The Kid LAROI & Justin Bieber        2.0          1              16  \n",
+       "2             Lil Nas X & Jack Harlow        3.0          1              14  \n",
+       "3                        Walker Hayes        4.0          3              19  \n",
+       "4                          Ed Sheeran        5.0          2              18  \n",
+       "...                               ...        ...        ...             ...  \n",
+       "330082                Thurston Harris        NaN         96               1  \n",
+       "330083                Robert & Johnny        NaN         97               1  \n",
+       "330084              The Ames Brothers        NaN         98               1  \n",
+       "330085                 Billy Williams        NaN         99               1  \n",
+       "330086                Frankie Vaughan        NaN        100               1  \n",
+       "\n",
+       "[330087 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +264,7 @@
        "           dtype='int64', name='date')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,42 +302,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Stay             224\n",
-       "Angel            205\n",
-       "Hold On          202\n",
-       "You              195\n",
-       "Heaven           194\n",
-       "                ... \n",
-       "Privilege          1\n",
-       "Six Thirty         1\n",
-       "Lord Above         1\n",
-       "Yesterday Man      1\n",
-       "Views              1\n",
-       "Name: song, Length: 24620, dtype: int64"
+       "song                  artist                               \n",
+       "Blinding Lights       The Weeknd                               90\n",
+       "Radioactive           Imagine Dragons                          87\n",
+       "Sail                  AWOLNATION                               79\n",
+       "I'm Yours             Jason Mraz                               76\n",
+       "How Do I Live         LeAnn Rimes                              69\n",
+       "                                                               ..\n",
+       "Safe And Sound        Fontella Bass                             1\n",
+       "Safety Dance          Glee Cast                                 1\n",
+       "Safety Net            Ariana Grande Featuring Ty Dolla $ign     1\n",
+       "Said N Done           21 Savage & Metro Boomin                  1\n",
+       "Keep My Spirit Alive  Kanye West                                1\n",
+       "Length: 29681, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"song\"].value_counts()"
+    "df[[\"song\", \"artist\"]].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "kanye = df[df[\"artist\"] == \"Kanye West\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>song</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>last-week</th>\n",
+       "      <th>peak-rank</th>\n",
+       "      <th>weeks-on-board</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Hurricane</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Praise God</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>2021-10-30</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Hurricane</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>2021-10-30</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Praise God</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Hurricane</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93238</th>\n",
+       "      <td>2003-12-27</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Through The Wire</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93351</th>\n",
+       "      <td>2003-12-20</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Through The Wire</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93473</th>\n",
+       "      <td>2003-12-13</td>\n",
+       "      <td>74</td>\n",
+       "      <td>Through The Wire</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93588</th>\n",
+       "      <td>2003-12-06</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Through The Wire</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93693</th>\n",
+       "      <td>2003-11-29</td>\n",
+       "      <td>94</td>\n",
+       "      <td>Through The Wire</td>\n",
+       "      <td>Kanye West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>361 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  rank              song      artist  last-week  peak-rank  \\\n",
+       "54    2021-11-06    55         Hurricane  Kanye West       58.0          6   \n",
+       "79    2021-11-06    80        Praise God  Kanye West       89.0         20   \n",
+       "157   2021-10-30    58         Hurricane  Kanye West       50.0          6   \n",
+       "188   2021-10-30    89        Praise God  Kanye West       99.0         20   \n",
+       "249   2021-10-23    50         Hurricane  Kanye West       44.0          6   \n",
+       "...          ...   ...               ...         ...        ...        ...   \n",
+       "93238 2003-12-27    39  Through The Wire  Kanye West       52.0         39   \n",
+       "93351 2003-12-20    52  Through The Wire  Kanye West       74.0         52   \n",
+       "93473 2003-12-13    74  Through The Wire  Kanye West       89.0         74   \n",
+       "93588 2003-12-06    89  Through The Wire  Kanye West       94.0         89   \n",
+       "93693 2003-11-29    94  Through The Wire  Kanye West        NaN         94   \n",
+       "\n",
+       "       weeks-on-board  \n",
+       "54                  9  \n",
+       "79                  5  \n",
+       "157                 8  \n",
+       "188                 4  \n",
+       "249                 7  \n",
+       "...               ...  \n",
+       "93238               5  \n",
+       "93351               4  \n",
+       "93473               3  \n",
+       "93588               2  \n",
+       "93693               1  \n",
+       "\n",
+       "[361 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kanye"
    ]
   },
   {
@@ -470,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +1104,7 @@
        "74346               1  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +1124,7 @@
        "10205"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
