adding new eda and cleaning and final dataset

--- a/dataCollection/spotifyAPI_1_1.ipynb
+++ b/dataCollection/spotifyAPI_1_1.ipynb
@@ -1,11 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collecting songs information using Spotify API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- for this i will be using Spotify api to collect sogs information from Spotify. \n",
+    "- I will need to create a spotify developer account or login using my current account.\n",
+    "- get the client ID and client secret form spotify.\n",
+    "- Write the script for the api, I followed along with this video [link here]()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# improting libraries  \n",
     "import requests\n",
     "import datetime\n",
     "import base64\n",
@@ -18,12 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setting clinet id and secret \n",
     "client_id = ''\n",
     "client_secret = ''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ## Writting the Spotify api scrept "
    ]
   },
   {
@@ -32,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a class to use all the functions needed for using spotify api\n",
     "class SpotifyAPI(object):\n",
     "    access_token = None\n",
     "    access_token_expires = datetime.datetime.now()\n",
@@ -150,21 +177,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# passing client id and secret to spotify class and creatting a new object from that class \n",
     "spotify = SpotifyAPI(client_id, client_secret)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ## Loading the data i cleaned in the previous step"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading in the data i prepared form the original one \n",
     "tracks = pd.read_csv('../data/unique_songs.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +304,7 @@
        "4     Ed Sheeran               NaN               NaN  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,16 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks_spotify = tracks"
+    "# copy the data in a new opject to save the newlly pull data from spotify \n",
+    "tracks_spotify = tracks "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +459,7 @@
        "4     Ed Sheeran               NaN               NaN  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,16 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creatting a column called (is_collected) to keep track of songs that has been pulled from spotify\n",
     "tracks_spotify[\"is_collected\"] = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -646,12 +684,13 @@
        "[29681 rows x 8 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Final shape of the data before running it on Spotify api\n",
     "tracks_spotify"
    ]
   },
@@ -661,6 +700,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# a function that take the artist name and the song name and run it on spotify to pull in the information and then \n",
+    "# assgin that information to thier approprate song and column.\n",
     "def get_info(i):\n",
     "    sp_song = tracks_spotify.loc[i,\"song\"]\n",
     "    sp_artist = tracks_spotify.loc[i,\"primary_artist\"]\n",
@@ -674,7 +715,7 @@
     "    #artist info\n",
     "    tracks_spotify.loc[i,\"match_artist\"] =spot_song['tracks']['items'][0]['artists'][0]['name']\n",
     "    tracks_spotify.loc[i,\"artist_id\"] = spot_song['tracks'][\"items\"][0][\"artists\"][0]['id']\n",
-    "    tracks_spotify.loc[i,\"artist_id\"] = spot_song['tracks'][\"items\"][0][\"artists\"][0]['uri']\n",
+    "    tracks_spotify.loc[i,\"artist_uri\"] = spot_song['tracks'][\"items\"][0][\"artists\"][0]['uri']\n",
     "    #album info\n",
     "    tracks_spotify.loc[i,\"release_date\"] = spot_song['tracks'][\"items\"][0][\"album\"]['release_date']\n",
     "    tracks_spotify.loc[i,\"Album_id\"] = spot_song['tracks'][\"items\"][0][\"album\"]['id']\n",
@@ -699,6 +740,8 @@
     }
    ],
    "source": [
+    "# running a for loop to first check if the infromation for the song is collected or not and then if not \n",
+    "# preform the function to get the information \n",
     "for i in tqdm(range(len(tracks_spotify))):\n",
     "    try:\n",
     "        if tracks_spotify.loc[i,\"is_collected\"] == False:\n",
@@ -706,15 +749,6 @@
     "                get_info(i)\n",
     "    except:\n",
     "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##tracks_spotify.to_csv(\"../data/tracks_spotify.csv\")"
    ]
   },
   {
@@ -750,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks_spotify.to_csv(\"../data/tracks_spotify_all.csv\")"
+    "#tracks_spotify.to_csv(\"../data/tracks_spotify_all.csv\")"
    ]
   },
   {
@@ -1238,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
