--- a/dataCollection/song_audio_features.ipynb
+++ b/dataCollection/song_audio_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,19 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 46%|████▌     | 46/100 [02:24<10:52, 12.09s/it]"
+      "100%|██████████| 29681/29681 [11:01:38<00:00,  1.34s/it]       \n"
      ]
     }
    ],
    "source": [
-    "for i in tqdm(range(100)):\n",
+    "for i in tqdm(range(len(audio_features))):\n",
     "    try:\n",
     "        if audio_features.loc[i,\"audio_collected\"] == False:\n",
     "            if spotify.perform_auth() == True:\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -301,17 +301,17 @@
       " 19  album_name          18155 non-null  object \n",
       " 20  album_uri           18155 non-null  object \n",
       " 21  audio_collected     29681 non-null  bool   \n",
-      " 22  danceability        10 non-null     float64\n",
-      " 23  energy              10 non-null     float64\n",
-      " 24  key                 10 non-null     float64\n",
-      " 25  loudness            10 non-null     float64\n",
-      " 26  mode                10 non-null     float64\n",
-      " 27  speechiness         10 non-null     float64\n",
-      " 28  acousticness        10 non-null     float64\n",
-      " 29  instrumentalness    10 non-null     float64\n",
-      " 30  liveness            10 non-null     float64\n",
-      " 31  valence             10 non-null     float64\n",
-      " 32  tempo               10 non-null     float64\n",
+      " 22  danceability        261 non-null    float64\n",
+      " 23  energy              261 non-null    float64\n",
+      " 24  key                 261 non-null    float64\n",
+      " 25  loudness            261 non-null    float64\n",
+      " 26  mode                261 non-null    float64\n",
+      " 27  speechiness         261 non-null    float64\n",
+      " 28  acousticness        261 non-null    float64\n",
+      " 29  instrumentalness    261 non-null    float64\n",
+      " 30  liveness            261 non-null    float64\n",
+      " 31  valence             261 non-null    float64\n",
+      " 32  tempo               261 non-null    float64\n",
       "dtypes: bool(2), float64(13), int64(3), object(15)\n",
       "memory usage: 7.1+ MB\n"
      ]
@@ -323,277 +323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>audio_collected</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>key</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.604</td>\n",
-       "      <td>0.366</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-7.519</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0282</td>\n",
-       "      <td>0.578000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.1330</td>\n",
-       "      <td>0.130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.591</td>\n",
-       "      <td>0.764</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-5.484</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0483</td>\n",
-       "      <td>0.038300</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.1030</td>\n",
-       "      <td>0.478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.736</td>\n",
-       "      <td>0.704</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-7.409</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0615</td>\n",
-       "      <td>0.020300</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0501</td>\n",
-       "      <td>0.894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.649</td>\n",
-       "      <td>0.760</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-6.487</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0574</td>\n",
-       "      <td>0.114000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.3170</td>\n",
-       "      <td>0.843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.807</td>\n",
-       "      <td>0.893</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-3.745</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0347</td>\n",
-       "      <td>0.045100</td>\n",
-       "      <td>0.000028</td>\n",
-       "      <td>0.3660</td>\n",
-       "      <td>0.537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.803</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-6.035</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1410</td>\n",
-       "      <td>0.000619</td>\n",
-       "      <td>0.000005</td>\n",
-       "      <td>0.3230</td>\n",
-       "      <td>0.331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.788</td>\n",
-       "      <td>0.859</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-2.724</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0856</td>\n",
-       "      <td>0.281000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0424</td>\n",
-       "      <td>0.822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.563</td>\n",
-       "      <td>0.664</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-5.044</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.1540</td>\n",
-       "      <td>0.335000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0849</td>\n",
-       "      <td>0.688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.664</td>\n",
-       "      <td>0.609</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-6.509</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0707</td>\n",
-       "      <td>0.304000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0926</td>\n",
-       "      <td>0.194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>True</td>\n",
-       "      <td>0.702</td>\n",
-       "      <td>0.825</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>-3.787</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0601</td>\n",
-       "      <td>0.008830</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0674</td>\n",
-       "      <td>0.915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    audio_collected  danceability  energy   key  loudness  mode  speechiness  \\\n",
-       "0              True         0.604   0.366   5.0    -7.519   1.0       0.0282   \n",
-       "1              True         0.591   0.764   1.0    -5.484   1.0       0.0483   \n",
-       "2              True         0.736   0.704   3.0    -7.409   0.0       0.0615   \n",
-       "3              True         0.649   0.760   1.0    -6.487   1.0       0.0574   \n",
-       "4              True         0.807   0.893  11.0    -3.745   0.0       0.0347   \n",
-       "5              True         0.803   0.597  11.0    -6.035   0.0       0.1410   \n",
-       "6              True         0.788   0.859   2.0    -2.724   1.0       0.0856   \n",
-       "7              True         0.563   0.664   9.0    -5.044   1.0       0.1540   \n",
-       "8              True         0.664   0.609   1.0    -6.509   1.0       0.0707   \n",
-       "9              True         0.702   0.825   6.0    -3.787   0.0       0.0601   \n",
-       "10            False           NaN     NaN   NaN       NaN   NaN          NaN   \n",
-       "11            False           NaN     NaN   NaN       NaN   NaN          NaN   \n",
-       "12            False           NaN     NaN   NaN       NaN   NaN          NaN   \n",
-       "\n",
-       "    acousticness  instrumentalness  liveness  valence  \n",
-       "0       0.578000          0.000000    0.1330    0.130  \n",
-       "1       0.038300          0.000000    0.1030    0.478  \n",
-       "2       0.020300          0.000000    0.0501    0.894  \n",
-       "3       0.114000          0.000000    0.3170    0.843  \n",
-       "4       0.045100          0.000028    0.3660    0.537  \n",
-       "5       0.000619          0.000005    0.3230    0.331  \n",
-       "6       0.281000          0.000000    0.0424    0.822  \n",
-       "7       0.335000          0.000000    0.0849    0.688  \n",
-       "8       0.304000          0.000000    0.0926    0.194  \n",
-       "9       0.008830          0.000000    0.0674    0.915  \n",
-       "10           NaN               NaN       NaN      NaN  \n",
-       "11           NaN               NaN       NaN      NaN  \n",
-       "12           NaN               NaN       NaN      NaN  "
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "audio_features.iloc[:13, 21:32]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "audio_features.to_csv(\"../data/tracks_spotify_all+audio_features\")"
+   ]
   }
  ],
  "metadata": {
