--- a/ML/ml.ipynb
+++ b/ML/ml.ipynb
@@ -72,11 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = df_train.drop(['Price'],axis=1)\n",
-    "y_train = rain['Price']\n",
+    "X_train = df_train.drop(['score'],axis=1)\n",
+    "y_train = train['score']\n",
     "\n",
-    "X_test = test.drop(['Price'],axis=1)\n",
-    "y_test = df_test['Price']"
+    "X_test = test.drop(['score'],axis=1)\n",
+    "y_test = df_test['score']"
    ]
   },
   {
@@ -108,10 +108,7 @@
     "\n",
     "#print the score of trining and testing\n",
     "LR_pipeline.score(X_train, y_train), LR_pipeline.score(X_test, y_test)\n",
-    "\n",
-    "print(\"R2 score on Traing set: %.2f\"% LR_pipeline.score(X_train,y_train))\n",
-    "print(\"R2 score on Testing set: %.2f\"% LR_pipeline.score(X_test,y_test))\n",
-    "print('Mean squared error: %.2f'% mean_squared_error(y_test,y_pred))"
+    "\n"
    ]
   },
   {
@@ -124,11 +121,7 @@
     "\n",
     "knn_model.fit(X_train, y_train)\n",
     "y_pred3= knn_model.predict(X_test)\n",
-    "\n",
-    "\n",
-    "print(\"R2 score on Traing set: %.2f\"% knn_model.score(X_train,y_train))\n",
-    "print(\"R2 score on Testing set: %.2f\"% knn_model.score(X_test,y_test))\n",
-    "print('Mean squared error: %.2f'% mean_squared_error(y_test,y_pred3))"
+    "\n"
    ]
   }
  ],
