--- a/dataCollection/song_audio_features.ipynb
+++ b/dataCollection/song_audio_features.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '86241dc85057485b9d020a85673e5c1d'\n",
-    "client_secret = '68e8b53b75d24a8c9e95aec12adad209'"
+    "client_id = ''\n",
+    "client_secret = ''"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   },
   "orig_nbformat": 4
  },
